--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,8 @@
 background: linear-gradient(101deg, rgba(0, 0, 0, 0.94) 0%, rgba(0, 0, 0, 1) 28%, rgba(164, 1, 241, 1) 100%);
 }
 
+.bg-or{
+  background: linear-gradient(90deg, rgba(255,115,0,1) 16%, rgba(255,255,255,1) 100%, rgba(254,254,254,1) 100%, rgba(255,255,255,1) 100%);}
 /* .bg-move:hover {
   transform: rotateY(180deg);
 } */
